@@ -16,6 +16,7 @@
             Fix mild memory leak in jsvMakeIntoVariableName that caused GC to run more often than normal
             E.toString now tries harder to allocate a Flat String, and works with no-alloc for Uint8Array/FlatStrings
             WIO_LTE fix SD card initialisation
+            Improve SD card reliability on all boards by trying to initialise multiple times before failing
   
      1v95 : nRF5x: Swap to UART fifo to avoid overrun errors at high baud rates
             Ensure Exceptions/errors are reported on a blank line
